tests/ui/typeck/issue-89275.stderr
error[E0308]: mismatched types
  --> $DIR/issue-89275.rs:28:29
   |
LL | fn downcast<'a, W: ?Sized>() -> &'a W {
   |                                 ----- help: consider changing downcast's return type: `&mut Other`
...
LL |     let other: &mut Other = downcast();
   |                ----------   ^^^^^^^^^^ types differ in mutability
   |                |
   |                expected due to this
   |
   = note: expected mutable reference `&mut Other`
                      found reference `&_`
note: the function downcast is defined here
  --> $DIR/issue-89275.rs:21:1
   |
LL | fn downcast<'a, W: ?Sized>() -> &'a W {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
